# vac_2

./: README.md  main.py  pyproject.toml
src/: Vacancy.py  file.py  parser.py  results.json  test.py  utils.py
tests/: tests.py
